--- a/src/style/pay.parameters.scss
+++ b/src/style/pay.parameters.scss
@@ -177,7 +177,7 @@
           left: -8px;
           justify-content: center;
           display: flex;
-          .green {
+          &.green {
             color: #24B329;
           }
           .help-icon {
