--- a/src/style/services.block.scss
+++ b/src/style/services.block.scss
@@ -71,6 +71,7 @@
       .top-side {
         position: relative;
         height: 98px;
+        background-color: white;
         .service-image {
           position: absolute;
           width: 157px;
