--- a/src/style/services.block.scss
+++ b/src/style/services.block.scss
@@ -144,9 +144,12 @@
         }
       }
       .service-settings {
+        overflow: hidden;
+        display: none;
         position: relative;
         width: 960px;
-        min-height: 100px;
+        height:0;
+        /*min-height: 100px;*/
         background: #EBEFF2;
         border-radius: 0px 0px 8px 8px;
         .input {
@@ -187,29 +190,25 @@
           display: inline-block;
           width: 216px;
           height: 52px;
-          margin-left: 23px;
-          bottom: -24px;
+          margin: 24px 0px 24px 23px;
         }
         .input2 {
           display: inline-block;
           width: 216px;
           height: 52px;
-          margin-left: 11px;
-          bottom: -24px;
+          margin: 24px 0 24px 11px;
         }
         .input3 {
           display: inline-block;
           width: 216px;
           height: 52px;
-          margin-left: 11px;
-          bottom: -24px;
+          margin: 24px 0 24px 11px;
         }
         .input4 {
           display: inline-block;
           width: 216px;
           height: 52px;
-          margin-left: 11px;
-          bottom: -24px;
+          margin: 24px 0 24px 11px;
         }
         .input5 {
           display: block;
