--- a/src/style/services.block.scss
+++ b/src/style/services.block.scss
@@ -1,258 +1,257 @@
-.services-block {
-  position: relative;
-  .back-box-services {
+.services-block{
+  position:relative;
+  .back-box-services{
     @extend .clickable;
-    position: absolute;
-    width: 206px;
-    height: 38px;
-    left: 0px;
-    top: 12px;
-    z-index: 100;
-    background: #FAFBFC;
-    .back-arrow {
+    position:absolute;
+    width:206px;
+    height:38px;
+    left:0px;
+    top:12px;
+    z-index:100;
+    background:#FAFBFC;
+    .back-arrow{
       @extend .clickable;
-      position: absolute;
-      top: 12px;
-      left: 0px;
+      position:absolute;
+      top:12px;
+      left:0px;
     }
-    .back-to-previous-page {
+    .back-to-previous-page{
       @extend .clickable;
-      position: absolute;
-      width: 167px;
-      height: 20px;
-      left: 30px;
-      top: calc(50% - 20px / 2);
-      font-weight: 600;
-      font-size: 14px;
-      line-height: 20px;
-      display: flex;
-      align-items: center;
-      color: rgba(47, 72, 106, 0.75);
+      position:absolute;
+      width:167px;
+      height:20px;
+      left:30px;
+      top:calc(50% - 20px / 2);
+      font-weight:600;
+      font-size:14px;
+      line-height:20px;
+      display:flex;
+      align-items:center;
+      color:rgba(47, 72, 106, 0.75);
     }
   }
-  .next-box-services {
+  .next-box-services{
     @extend .clickable;
-    position: absolute;
-    width: 206px;
-    height: 38px;
-    right: 0px;
-    top: 12px;
-    z-index: 100;
-    background: #FAFBFC;
-    .next-arrow {
+    position:absolute;
+    width:206px;
+    height:38px;
+    right:0px;
+    top:12px;
+    z-index:100;
+    background:#FAFBFC;
+    .next-arrow{
       @extend .clickable;
-      position: absolute;
-      top: 12px;
-      right: 0px;
+      position:absolute;
+      top:12px;
+      right:0px;
     }
-    .next-page {
+    .next-page{
       @extend .clickable;
-      position: absolute;
-      width: 167px;
-      height: 20px;
-      right: 30px;
-      top: calc(50% - 20px / 2);
-      font-weight: 600;
-      font-size: 14px;
-      line-height: 20px;
-      display: flex;
-      justify-content: flex-end;
-      align-items: center;
-      color: rgba(47, 72, 106, 0.75);
+      position:absolute;
+      width:167px;
+      height:20px;
+      right:30px;
+      top:calc(50% - 20px / 2);
+      font-weight:600;
+      font-size:14px;
+      line-height:20px;
+      display:flex;
+      justify-content:flex-end;
+      align-items:center;
+      color:rgba(47, 72, 106, 0.75);
     }
   }
-  .service-rows {
-    position: relative;
-    width: 960px;
-    top: 28px;
-    .service-row {
-      position: relative;
-      margin-bottom: 24px;
-      .top-side {
-        position: relative;
-        height: 98px;
-        background-color: white;
-        .service-image {
-          position: absolute;
-          width: 157px;
-          height: 98px;
-          left: 0;
-          top: 0;
-          border-radius: 8px 0 0 8px;
+  .service-rows{
+    position:relative;
+    width:960px;
+    top:28px;
+    .service-row{
+      position:relative;
+      margin-bottom:24px;
+      .top-side{
+        position:relative;
+        height:98px;
+        background-color:white;
+        .service-image{
+          position:absolute;
+          width:157px;
+          height:98px;
+          left:0;
+          top:0;
+          border-radius:8px 0 0 8px;
         }
-        .image-closer {
-          position: absolute;
-          width: 23px;
-          height: 98px;
-          left: 146px;
-          top: 0px;
-          background: #FFFFFF;
-          border-radius: 8px;
+        .image-closer{
+          position:absolute;
+          width:23px;
+          height:98px;
+          left:146px;
+          top:0px;
+          background:#FFFFFF;
+          border-radius:8px;
         }
-        .service-text {
-          .service-title {
-            position: absolute;
-            width: 244px;
-            height: 24px;
-            left: 161px;
-            top: 12px;
-            font-weight: bold;
-            font-size: 16px;
-            line-height: 24px;
+        .service-text{
+          .service-title{
+            position:absolute;
+            width:244px;
+            height:24px;
+            left:161px;
+            top:12px;
+            font-weight:bold;
+            font-size:16px;
+            line-height:24px;
             /* identical to box height, or 150% */
-            display: flex;
-            align-items: center;
+            display:flex;
+            align-items:center;
             /* Black */
-            color: #2F486A;
+            color:#2F486A;
           }
-          .service-text-value {
-            position: absolute;
-            width: 434px;
-            height: 44px;
-            left: 161px;
-            top: 42px;
-            font-weight: normal;
-            font-size: 14px;
-            line-height: 20px;
-            color: #2F486A;
-          }
-        }
-        .price {
-          position: absolute;
-          right: 5%;
-          top: 4px;
-          font-weight: 600;
-          font-size: 16px;
-          line-height: 24px;
-          display: flex;
-          align-items: center;
-          color: #2F486A;
-          order: 0;
-          align-self: center;
-          margin: 8px 0;
-          &.price-blue {
-            color: #267FF9;
+          .service-text-value{
+            position:absolute;
+            width:434px;
+            height:44px;
+            left:161px;
+            top:42px;
+            font-weight:normal;
+            font-size:14px;
+            line-height:20px;
+            color:#2F486A;
           }
         }
-        .service-checkbox {
+        .price{
+          position:absolute;
+          right:5%;
+          top:4px;
+          font-weight:600;
+          font-size:16px;
+          line-height:24px;
+          display:flex;
+          align-items:center;
+          color:#2F486A;
+          order:0;
+          align-self:center;
+          margin:8px 0;
+          &.price-blue{
+            color:#267FF9;
+          }
+        }
+        .service-checkbox{
           @extend .clickable;
-          position: absolute;
-          width: 24px;
-          height: 24px;
-          right: 12px;
-          top: 12px;
+          position:absolute;
+          width:24px;
+          height:24px;
+          right:12px;
+          top:12px;
         }
       }
-      .service-settings {
-        overflow: hidden;
-        display: none;
-        position: relative;
-        width: 960px;
+      .service-settings{
+        overflow:hidden;
+        display:none;
+        position:relative;
+        width:960px;
         height:0;
         /*min-height: 100px;*/
-        background: #EBEFF2;
-        border-radius: 0px 0px 8px 8px;
-        .input {
+        background:#EBEFF2;
+        border-radius:0px 0px 8px 8px;
+        .input{
           @extend .clickable;
-          position: relative;
-          background: #FFFFFF;
-          border-radius: 4px;
-          .caption {
-            position: absolute;
-            left: 12px;
-            top: -15px;
-            font-weight: normal;
-            font-size: 12px;
-            line-height: 16px;
-            align-items: center;
-            color: rgba(47, 72, 106, 0.75);
+          position:relative;
+          background:#FFFFFF;
+          border-radius:4px;
+          .caption{
+            position:absolute;
+            left:12px;
+            top:-15px;
+            font-weight:normal;
+            font-size:12px;
+            line-height:16px;
+            align-items:center;
+            color:rgba(47, 72, 106, 0.75);
           }
-          .value {
-            position: absolute;
-            left: 12px;
-            top: 24px;
-            font-weight: 500;
-            font-size: 14px;
-            line-height: 20px;
-            align-items: center;
-            color: #2F486A;
+          .value{
+            position:absolute;
+            left:12px;
+            top:24px;
+            font-weight:500;
+            font-size:14px;
+            line-height:20px;
+            align-items:center;
+            color:#2F486A;
           }
-          .arrow-down-select-mini {
-            position: absolute;
-            width: 16px;
-            height: 16px;
-            right: 12px;
-            top: calc(50% - 16px / 2);
-            background: url(../static/arrow-down-select-mini.svg) no-repeat center;
+          .arrow-down-select-mini{
+            position:absolute;
+            width:16px;
+            height:16px;
+            right:12px;
+            top:calc(50% - 16px / 2);
+            background:url(../static/arrow-down-select-mini.svg) no-repeat center;
           }
         }
-        .input1 {
-          display: inline-block;
-          width: 216px;
-          height: 52px;
-          margin: 24px 0px 24px 23px;
+        .input1{
+          display:inline-block;
+          width:216px;
+          height:52px;
+          margin:24px 0px 24px 23px;
         }
-        .input2 {
-          display: inline-block;
-          width: 216px;
-          height: 52px;
-          margin: 24px 0 24px 11px;
+        .input2{
+          display:inline-block;
+          width:216px;
+          height:52px;
+          margin:24px 0 24px 11px;
         }
-        .input3 {
-          display: inline-block;
-          width: 216px;
-          height: 52px;
-          margin: 24px 0 24px 11px;
+        .input3{
+          display:inline-block;
+          width:216px;
+          height:52px;
+          margin:24px 0 24px 11px;
         }
-        .input4 {
-          display: inline-block;
-          width: 216px;
-          height: 52px;
-          margin: 24px 0 24px 11px;
+        .input4{
+          display:inline-block;
+          width:216px;
+          height:52px;
+          margin:24px 0 24px 11px;
         }
-        .input5 {
-          display: block;
-          width: 912px;
-          height: 52px;
-          margin-left: 23px;
-          bottom: -28px;
-          margin-bottom: 41px;
+        .input5{
+          display:block;
+          width:912px;
+          height:52px;
+          margin-left:23px;
+          bottom:-28px;
+          margin-bottom:41px;
         }
-        .input6 {
-          display: inline-block;
-          margin-left: 23px;
-          width: 448px;
-          height: 52px;
-          margin-bottom: 16px;
+        .input6{
+          display:inline-block;
+          margin-left:23px;
+          width:448px;
+          height:52px;
+          margin-bottom:16px;
         }
-        .input7 {
-          display: inline-block;
-          margin-left: 11px;
-          width: 448px;
-          height: 52px;
-          margin-bottom: 16px;
+        .input7{
+          display:inline-block;
+          margin-left:11px;
+          width:448px;
+          height:52px;
+          margin-bottom:16px;
         }
       }
     }
   }
-  .button-subbmit {
+  .button-subbmit{
     @extend .clickable;
-    position: relative;
-    width: 268px;
-    height: 52px;
-    background: #267FF9;
-    box-shadow: 0px 6px 12px rgba(38, 127, 249, 0.2), 0px 4px 6px rgba(38, 127, 249, 0.2);
-    border-radius: 4px;
+    position:relative;
+    width:268px;
+    height:52px;
+    background:#267FF9;
+    box-shadow:0px 6px 12px rgba(38, 127, 249, 0.2), 0px 4px 6px rgba(38, 127, 249, 0.2);
+    border-radius:4px;
     margin:135px auto 42px;
-    .button-label {
-      position: relative;
-      font-weight: 600;
-      font-size: 16px;
-      line-height: 20px;
-      align-items: center;
-      text-align: center;
-      color: #FFFFFF;
-      top: 32%;
+    font-weight:600;
+    font-size:16px;
+    line-height:20px;
+    color:#FFFFFF;
+    &:hover{
+      background:#529BFF;
+      box-shadow:0px 12px 16px rgba(38, 127, 249, 0.2), 0px 6px 12px rgba(38, 127, 249, 0.2);
     }
   }
+
 }
