--- a/src/style/paying.scss
+++ b/src/style/paying.scss
@@ -6,7 +6,7 @@
     height:38px;
     left:0;
     width:250px;
-    top:12px;
+    top:0;
     z-index:0;
     background:#FAFBFC;
     .back-arrow{
