--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -291,6 +291,7 @@ input[type=checkbox]{
   margin-bottom:32px;
   position:relative;
   width:960px;
+  z-index:1;
   .main-info{
     left:24px;
     position:relative;
