--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -33,6 +33,39 @@ body{
   transform-origin:50% 0;
   zoom:80%;
 }
+.droopdown-expanded{
+  &.show{
+    display:flex;
+  }
+  display:none;
+  flex-direction:column;
+  padding:8px 0;
+  position:absolute;
+  &.align-left{
+    left:0px;
+  }
+  &.align-right{
+  }
+
+
+  top:8px;
+  background:#FFFFFF;
+  /* 8dp */
+  box-shadow:0px -2px 2px rgba(85, 89, 106, 0.04), 0px 2px 6px rgba(85, 89, 106, 0.16), 0px 4px 8px rgba(85, 89, 106, 0.08);
+  border-radius:8px;
+  .droopdown-element{
+    display: flex;
+    width: 124px;
+    height: 32px;
+    justify-content: center;
+    &:hover{
+      background: rgba(47, 72, 106, 0.1);
+    }
+    .droomdown-element-selected{
+      background: #DFECFE;
+    }
+  }
+}
 :focus{
   outline:none;
 }
@@ -158,20 +191,20 @@ button, .btn-large{
   width:960px;
 }
 .title-box{
-  display: block;
+  display:block;
   position:relative;
   text-align:center;
   width:960px;
   z-index:-1;
-  min-height: 32px;
+  min-height:32px;
   .line{
-    background: #dcdfe2;
-    height: 1.17px;
-    left: 0;
-    position: absolute;
+    background:#dcdfe2;
+    height:1.17px;
+    left:0;
+    position:absolute;
     top:50%;
-    width: 960px;
-    z-index: -1;
+    width:960px;
+    z-index:-1;
   }
   .title{
     align-self:center;
@@ -844,6 +877,7 @@ input[type=checkbox]{
       }
     }
     .guests{
+      @extend .clickable;
       height:52px;
       left:472px;
       position:absolute;
