--- a/src/style/available.rooms.scss
+++ b/src/style/available.rooms.scss
@@ -128,6 +128,7 @@
   .available-rooms-filter{
     position:relative;
     top:28px;
+    z-index:100;
     .available-rooms-filter-title{
       align-items:center;
       color:rgba(47, 72, 106, 0.75);
@@ -147,7 +148,7 @@
       padding:0;
       position:absolute;
       top:-5px;
-      width:668px;
+      width:600px;
       .input1{
         @extend .clickable;
         align-self:center;
@@ -216,10 +217,15 @@
         padding:8px 12px;
         position:static;
         top:0;
-        width:191px;
+        width:210px;
+        .droopdown-expanded{
+          left:63px;
+          .droopdown-elements{
+            max-height: 200px;
+          }
+        }
         .text{
           position:static;
-          width:130px;
         }
         .select-arrow-down{
           align-self:center;
@@ -227,9 +233,9 @@
           height:16px;
           margin:21px 0;
           order:1;
-          position:relative;
-          right:-20px;
-          top:calc(50% - 16px / 2);
+          position:absolute;
+          left:245px;
+          top:-10px;
           width:16px;
         }
       }
@@ -249,10 +255,28 @@
         padding:8px 12px;
         position:static;
         top:0;
-        width:196px;
+        width:315px;
+        .droopdown{
+          font-size:14px;
+          line-height:20px;
+          color:#2F486A;
+
+        }
+        .droopdown-expanded{
+          left:348px;
+          .droopdown-elements{
+            max-height: 165px;
+          }
+        }
         .text{
           position:static;
-          width:135px;
+          width:185px;
+          &.droopdown-default-value{
+            display: none;
+          }
+          &.droopdown-variable-value{
+            display: none;
+          }
         }
         .select-arrow-down{
           align-self:center;
@@ -280,8 +304,8 @@
       border-radius:8px;
       box-shadow:0px -2px 1px rgba(85, 89, 106, 0.0196802), 0px 2px 1px rgba(85, 89, 106, 0.0196802), 0px 4px 2px rgba(85, 89, 106, 0.0282725), 0px 6px 4px rgba(85, 89, 106, 0.035), 0px 8px 8px rgba(85, 89, 106, 0.0417275), 0px 18px 16px rgba(85, 89, 106, 0.0503198), 0px 30px 40px rgba(85, 89, 106, 0.07);
       .top-side{
-        height: 310px;
-        position: relative;
+        height:310px;
+        position:relative;
         .room-title{
           @extend .buf1;
           font-size:26px;
