--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -33,36 +33,152 @@ body{
   transform-origin:50% 0;
   zoom:80%;
 }
-.droopdown-expanded{
-  &.show{
-    display:flex;
+.droopdown{
+  border:1px solid rgba(82, 155, 255, 0);
+  box-sizing:border-box;
+  border-radius:4px;
+  &:hover{
+    border:1px solid #529BFF !important;
+    box-sizing:border-box !important;
+    border-radius:4px !important;
   }
+  &:active{
+    background:#DCE0E3;
+  }
+  .droopdown-value{
+  }
+  .droopdown-variable-value{
+    .var1{
+      display: inline-block;
+    }
+    .var1-1, .var1-2, .var1-5{
+      display:none;
+    }
+  }
+  .droopdown-caption{
+    color:rgba(47, 72, 106, 0.75);
+    margin-right:8px;
+  }
+  .droopdown-clear-checked{
+    @extend .clickable;
+    font-size:14px;
+    line-height:20px;
+    display:flex;
+    align-items:center;
+    color:#267FF9;
+    flex:none;
+    order:0;
+    align-self:flex-start;
+    margin:10px 20px;
+  }
+}
+.droopdown-expanded{
   display:none;
   flex-direction:column;
   padding:8px 0;
   position:absolute;
-  &.align-left{
-    left:0px;
-  }
-  &.align-right{
-  }
-
-
-  top:8px;
+  top:42px;
   background:#FFFFFF;
-  /* 8dp */
   box-shadow:0px -2px 2px rgba(85, 89, 106, 0.04), 0px 2px 6px rgba(85, 89, 106, 0.16), 0px 4px 8px rgba(85, 89, 106, 0.08);
   border-radius:8px;
-  .droopdown-element{
-    display: flex;
-    width: 124px;
-    height: 32px;
-    justify-content: center;
-    &:hover{
-      background: rgba(47, 72, 106, 0.1);
+  z-index:1;
+  &.show{
+    display:flex;
+  }
+  &.align-left{
+    left:0;
+  }
+  &.align-right{
+    right:0;
+  }
+  .droopdown-elements{
+    overflow:auto;
+    max-height:150px;
+  }
+  .droopdown-check-element{
+    position:relative;
+    display:block;
+    height:32px;
+    font-weight:500;
+    font-size:14px;
+    line-height:20px;
+    align-items:center;
+    color:#2F486A;
+    min-width:50px;
+    .value{
+      display:inline;
+      top:6px;
+      left:40px;
+      position:absolute;
     }
-    .droomdown-element-selected{
-      background: #DFECFE;
+    &:before{
+      position:absolute;
+      content:'';
+      height:24px;
+      width:24px;
+      top:4px;
+      left:12px;
+      background:url(../static/checkbox.svg) center no-repeat;
+    }
+    &:hover{
+    }
+    &.selected{
+      &:before{
+        background:url(../static/checkbox-checked.svg) center no-repeat;
+      }
+    }
+    &.food-type{
+      width:250px;
+    }
+  }
+  .droopdown-element{
+    position:relative;
+    display:block;
+    height:32px;
+    font-weight:500;
+    font-size:14px;
+    line-height:20px;
+    align-items:center;
+    color:#2F486A;
+    min-width:50px;
+    .value{
+      display:inline;
+      top:6px;
+      left:35px;
+      position:absolute;
+    }
+    &:before{
+      position:absolute;
+      content:'';
+      height:16px;
+      width:16px;
+      top:8px;
+      left:12px;
+    }
+    &:hover{
+      background:rgba(47, 72, 106, 0.1);
+    }
+    &.selected{
+      &:before{
+        background:url(../static/checkbird.svg) center no-repeat;
+      }
+      color:#267FF9;
+      background:#DFECFE;
+    }
+    &.pay-type{
+      width:208px;
+    }
+    &.food-type{
+      width:225px;
+    }
+    &.child-age{
+      width:124px;
+    }
+    &.language{
+      width:115px;
+    }
+    &.currency{
+      width:115px;
     }
   }
 }
@@ -272,15 +388,18 @@ input[type=checkbox]{
   border-radius:0 0 8px 8px;
   color:rgba(47, 72, 106, 0.75);
   font-weight:500;
-  height:56px;
   margin-bottom:32px;
+  z-index:600;
+  padding:10px 16px;
+  width:930px;
+  height:40px;
   .arrow-down{
     height:16px;
     vertical-align:middle;
     width:16px;
   }
   %top{
-    top:16px;
+    top:0px;
   }
   .frame-7{
     display:inline-block;
@@ -289,15 +408,20 @@ input[type=checkbox]{
     width:230px;
     @extend %top;
     .frame-1, .frame-2{
+      @extend .clickable;
       align-self:center;
       display:inline-block;
-      padding:2px 8px;
+      .droopdown-value{
+        padding:8px;
+        display:inline-block;
+        width:52px;
+      }
     }
   }
   .terms-frame{
     display:inline-block;
     height:24px;
-    left:560px;
+    left:540px;
     position:relative;
     @extend %top;
     .privacy-and-term{
@@ -305,6 +429,7 @@ input[type=checkbox]{
       width:125px;
     }
     .info-icon{
+      @extend .clickable;
       color:rgba(47, 72, 106, 0.25);
       display:inline-block;
       font-family:Material Icons, serif;
