--- a/src/style/popup-select-guest.scss
+++ b/src/style/popup-select-guest.scss
@@ -246,6 +246,8 @@
           }
           .droopdown-expanded{
             top:50px;
+            width: 140px;
+
           }
         }
       }
