--- a/src/style/available.rooms.scss
+++ b/src/style/available.rooms.scss
@@ -150,9 +150,16 @@
       top:-5px;
       width:600px;
       .input1{
+        &.selected{
+          background:#267FF9;
+          .text{
+            color: #FFFFFF;
+          }
+        }
         @extend .clickable;
         align-self:center;
-        background:#267FF9;
+        border: 1px solid #DCDFE2;
+        box-sizing: border-box;
         border-radius:4px;
         display:flex;
         flex:none;
@@ -166,7 +173,6 @@
         .text{
           align-items:center;
           align-self:center;
-          color:#FFFFFF;
           display:flex;
           flex:none;
           font-weight:500;
