--- a/src/style/available.rooms.none.scss
+++ b/src/style/available.rooms.none.scss
@@ -77,42 +77,41 @@
         top: 20px;
         .first-date {
           position: relative;
-          width: 68px;
+          width: 110px;
           height: 24px;
           font-family: Inter;
           font-style: normal;
           font-weight: 600;
           font-size: 16px;
           line-height: 24px;
-          /* identical to box height, or 150% */
           display: flex;
           align-items: center;
           text-align: center;
-          /* Black */
           color: #2F486A;
+          justify-content: flex-end;
+          left: -45px;
         }
         .minus-icon {
           position: relative;
           width: 16px;
           height: 16px;
-          left: 23px;
+          left: -8px;
           top: 6px;
         }
         .second-date {
           position: relative;
-          width: 83px;
+          width: 110px;
           height: 24px;
-          left: 45px;
+          left: 30px;
           font-family: Inter;
           font-style: normal;
           font-weight: 600;
           font-size: 16px;
           line-height: 24px;
-          /* identical to box height, or 150% */
           display: flex;
           align-items: center;
           text-align: center;
-          /* Black */
+          justify-content: flex-start;
           color: #2F486A;
         }
       }
