--- a/src/style/available.rooms.scss
+++ b/src/style/available.rooms.scss
@@ -152,6 +152,7 @@
       .input1{
         &.selected{
           background:#267FF9;
+          border: none;
           .text{
             color: #FFFFFF;
           }
